--- a/public/tasks.html
+++ b/public/tasks.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TaskHub - Lista de Tarefas</title>
+  <style>
+@import url('https://fonts.googleapis.com/css2?family=Bungee&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');
+</style>
   <link rel="stylesheet" href="/styles.css">
 </head>
 
